--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
     </dependencies>
 
     <build>
-        <finalName>smart-framework</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <!-- Compile -->
             <plugin>
