--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.smart</groupId>
     <artifactId>smart-framework</artifactId>
-    <version>1.0</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
