【I】使用 2.0-SNAPSHOT 版本

--- a/pom.xml
+++ b/pom.xml
@@ -108,9 +108,12 @@
     <distributionManagement>
         <repository>
             <id>osc</id>
-            <name>OSC</name>
             <url>http://maven.oschina.net/content/repositories/thirdparty/</url>
         </repository>
+        <snapshotRepository>
+            <id>osc</id>
+            <url>http://maven.oschina.net/content/repositories/osc_snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>
