--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,16 @@
             <scope>provided</scope>
         </dependency>
         <!-- Log4J -->
-        <dependency>
+        <!--<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>-->
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
         <!-- Jackson -->
         <dependency>
