--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.smart</groupId>
-    <artifactId>smart-framework</artifactId>
-    <version>2.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <smart.version>2.0-SNAPSHOT</smart.version>
     </properties>
+
+    <groupId>com.smart</groupId>
+    <artifactId>smart-framework</artifactId>
+    <version>${smart.version}</version>
 
     <dependencies>
         <!-- JUnit -->
@@ -29,12 +29,6 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Log4J -->
-        <!--<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>-->
         <!-- SLF4J -->
         <dependency>
             <groupId>org.slf4j</groupId>
