--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
     <parent>
         <groupId>com.smart</groupId>
         <artifactId>smart-parent</artifactId>
-        <version>${smart.version}</version>
+        <version>1.0</version>
         <relativePath>../smart-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>smart-framework</artifactId>
+    <version>2.0</version>
 
     <dependencies>
         <!-- JUnit -->
