--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <artifactId>smart-framework</artifactId>
     <version>2.0</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- JUnit -->
