--- a/smart-plugin-i18n/pom.xml
+++ b/smart-plugin-i18n/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.smart</groupId>
         <artifactId>smart</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${smart.version}</version>
     </parent>
 
     <artifactId>smart-plugin-i18n</artifactId>
