--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <smart.version>2.1</smart.version>
         <jackson.version>1.9.13</jackson.version>
         <cxf.version>2.6.9</cxf.version>
         <lucene.version>4.6.0</lucene.version>
@@ -17,7 +16,7 @@
 
     <groupId>com.smart</groupId>
     <artifactId>smart</artifactId>
-    <version>${smart.version}</version>
+    <version>2.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -249,7 +248,7 @@
             <dependency>
                 <groupId>com.smart</groupId>
                 <artifactId>smart-framework</artifactId>
-                <version>${smart.version}</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
