--- a/smart-plugin-template/pom.xml
+++ b/smart-plugin-template/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.smart</groupId>
         <artifactId>smart</artifactId>
-        <version>${smart.version}</version>
+        <version>2.1</version>
     </parent>
 
     <artifactId>smart-plugin-template</artifactId>
