【I】简化 shiro 与 smart 配置

--- a/smart-security/pom.xml
+++ b/smart-security/pom.xml
@@ -30,6 +30,11 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
         </dependency>
+        <!-- Apache Commons -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
