--- a/smart-plugin-i18n/pom.xml
+++ b/smart-plugin-i18n/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.smart</groupId>
         <artifactId>smart</artifactId>
-        <version>2.1</version>
+        <version>2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>smart-plugin-i18n</artifactId>
