--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>smart-sso</module>
         <module>smart-security</module>
         <module>smart-cache</module>
+        <module>smart-cache-ehcache</module>
         <module>smart-plugin-cache</module>
         <module>smart-plugin-soap</module>
         <module>smart-plugin-rest</module>
@@ -204,6 +205,12 @@
                 <artifactId>xmlrpc-client</artifactId>
                 <version>${xmlrpc.version}</version>
             </dependency>
+            <!-- EhCache -->
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+                <version>2.8.1</version>
+            </dependency>
             <!-- Apache Commons -->
             <dependency>
                 <groupId>commons-lang</groupId>
@@ -249,6 +256,11 @@
             <dependency>
                 <groupId>com.smart</groupId>
                 <artifactId>smart-framework</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.smart</groupId>
+                <artifactId>smart-cache</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
