【I】初步完成 Smart Cache 与 EhCache 实现

--- a/smart-cache-ehcache/pom.xml
+++ b/smart-cache-ehcache/pom.xml
@@ -20,6 +20,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
         <!-- EhCache -->
         <dependency>
             <groupId>net.sf.ehcache</groupId>
