--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>smart-security</module>
         <module>smart-cache</module>
         <module>smart-cache-ehcache</module>
+        <module>smart-cache-redis</module>
         <module>smart-plugin-cache</module>
         <module>smart-plugin-soap</module>
         <module>smart-plugin-rest</module>
@@ -210,6 +211,12 @@
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
                 <version>2.8.1</version>
+            </dependency>
+            <!-- Jedis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.4.2</version>
             </dependency>
             <!-- Apache Commons -->
             <dependency>
