--- a/smart-cache-redis/src/test/resources/config.properties
+++ b/smart-cache-redis/src/test/resources/config.properties
@@ -1,4 +1,15 @@
-cache.type=redis
-cache.ip=192.168.0.109
-cache.port=
-cache.password=
+cache.redis.ip=192.168.0.109
+cache.redis.port=
+cache.redis.username=
+cache.redis.passowrd=
+
+
+cache.redis.ip.xxx=192.168.0.109
+cache.redis.port.xxx=
+cache.redis.username.xxx=
+cache.redis.passowrd.xxx=
+
+cache.redis.ip.one=192.168.0.109
+cache.redis.port.one=
+cache.redis.username.one=
+cache.redis.passowrd.one=
