--- a/smart-cache/pom.xml
+++ b/smart-cache/pom.xml
@@ -27,6 +27,10 @@
         </dependency>
         <!-- Apache Commons -->
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
