--- a/smart-cache-ehcache/pom.xml
+++ b/smart-cache-ehcache/pom.xml
@@ -30,6 +30,11 @@
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
         </dependency>
+        <!-- Apache Commons -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
         <!-- Smart -->
         <dependency>
             <groupId>com.smart</groupId>
