--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>smart-plugin-hessian</module>
         <module>smart-plugin-template</module>
         <module>smart-plugin-search</module>
+        <module>smart-plugin-mybatis</module>
     </modules>
 
     <dependencyManagement>
