--- a/smart4j-plugin-mybatis/src/main/resources/mybatis-sample.properties
+++ b/smart4j-plugin-mybatis/src/main/resources/mybatis-sample.properties
@@ -1,4 +1,4 @@
-##Mybatis for Smart \u914D\u7F6E\u8BF4\u660E
+##Mybatis for Smart4J \u914D\u7F6E\u8BF4\u660E
 ##author:         abel533/isea533
 ##gitosc:         http://git.oschina.net/free
 ##blog_osc:       http://my.oschina.net/flags/blog
