--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <groupId>org.smart4j</groupId>
     <artifactId>smart</artifactId>
     <version>2.2-SNAPSHOT</version>
@@ -280,7 +286,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -290,7 +295,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -304,38 +308,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.15</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <!-- OSC Public -->
-        <repository>
-            <id>osc</id>
-            <url>http://maven.oschina.net/content/groups/public/</url>
-        </repository>
-        <!-- OSC Thirdparty -->
-        <repository>
-            <id>osc_thirdparty</id>
-            <url>http://maven.oschina.net/content/repositories/thirdparty/</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <!-- OSC Public -->
-        <repository>
-            <id>osc</id>
-            <url>http://maven.oschina.net/content/repositories/thirdparty/</url>
-        </repository>
-        <!-- OSC Thirdparty -->
-        <snapshotRepository>
-            <id>osc</id>
-            <url>http://maven.oschina.net/content/repositories/osc_snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
