--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,38 @@
 
     <groupId>org.smart4j</groupId>
     <artifactId>smart</artifactId>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.2</version>
     <packaging>pom</packaging>
+
+    <name>Smart</name>
+    <url>http://www.smart4j.org/</url>
+    <description>Smart 包括一款轻量级的 Java Web 框架与一些可重用的类库</description>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@git.oschina.net:huangyong/smart.git</connection>
+        <developerConnection>scm:git:git@git.oschina.net:huangyong/smart.git</developerConnection>
+        <url>git@git.oschina.net:huangyong/smart.git</url>
+    </scm>
+
+    <issueManagement>
+        <system>Git@OSC</system>
+        <url>http://git.oschina.net/huangyong/smart/issues</url>
+    </issueManagement>
+
+    <developers>
+        <developer>
+            <name>huangyong</name>
+            <email>huangyong.java@gmail.com</email>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,26 +54,6 @@
         <lucene.version>4.6.0</lucene.version>
         <xmlrpc.version>3.1.3</xmlrpc.version>
     </properties>
-
-    <modules>
-        <module>smart-framework</module>
-        <module>smart-sso</module>
-        <module>smart-security</module>
-        <module>smart-cache</module>
-        <module>smart-cache-ehcache</module>
-        <module>smart-cache-redis</module>
-        <module>smart-plugin-cache</module>
-        <module>smart-plugin-soap</module>
-        <module>smart-plugin-rest</module>
-        <module>smart-plugin-xmlrpc</module>
-        <module>smart-plugin-mail</module>
-        <module>smart-plugin-i18n</module>
-        <module>smart-plugin-job</module>
-        <module>smart-plugin-hessian</module>
-        <module>smart-plugin-template</module>
-        <module>smart-plugin-search</module>
-        <module>smart-plugin-mybatis</module>
-    </modules>
 
     <dependencyManagement>
         <dependencies>
@@ -286,6 +296,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -295,6 +306,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -308,11 +320,32 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <modules>
+        <module>smart-framework</module>
+        <module>smart-sso</module>
+        <module>smart-security</module>
+        <module>smart-cache</module>
+        <module>smart-cache-ehcache</module>
+        <module>smart-cache-redis</module>
+        <module>smart-plugin-cache</module>
+        <module>smart-plugin-soap</module>
+        <module>smart-plugin-rest</module>
+        <module>smart-plugin-xmlrpc</module>
+        <module>smart-plugin-mail</module>
+        <module>smart-plugin-i18n</module>
+        <module>smart-plugin-job</module>
+        <module>smart-plugin-hessian</module>
+        <module>smart-plugin-template</module>
+        <module>smart-plugin-search</module>
+        <module>smart-plugin-mybatis</module>
+    </modules>
 
 </project>
