--- a/smart-sso/pom.xml
+++ b/smart-sso/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.smart4j</groupId>
         <artifactId>smart</artifactId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
     </parent>
 
     <artifactId>smart-sso</artifactId>
