--- a/smart-plugin-job/pom.xml
+++ b/smart-plugin-job/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.smart4j</groupId>
         <artifactId>smart</artifactId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>smart-plugin-job</artifactId>
