--- a/smart-plugin-mybatis/pom.xml
+++ b/smart-plugin-mybatis/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>smart</artifactId>
         <groupId>org.smart4j</groupId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
