【F】提供数据源工厂接口，可配置相应的连接池实现

--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,7 @@
         <module>smart-plugin-template</module>
         <module>smart-plugin-search</module>
         <module>smart-plugin-mybatis</module>
+        <module>smart-plugin-c3p0</module>
     </modules>
 
 </project>
