【F】提供 Druid 插件，可进行连接池监控

--- a/pom.xml
+++ b/pom.xml
@@ -383,6 +383,7 @@
         <module>smart-plugin-search</module>
         <module>smart-plugin-mybatis</module>
         <module>smart-plugin-c3p0</module>
+        <module>smart-plugin-druid</module>
     </modules>
 
 </project>
