【I】将 Smart Security 模块转换为 Smart Security 插件，并提供基于注解的授权特性

--- a/pom.xml
+++ b/pom.xml
@@ -367,7 +367,6 @@
     <modules>
         <module>smart-framework</module>
         <module>smart-sso</module>
-        <module>smart-security</module>
         <module>smart-cache</module>
         <module>smart-cache-ehcache</module>
         <module>smart-cache-redis</module>
@@ -384,6 +383,7 @@
         <module>smart-plugin-mybatis</module>
         <module>smart-plugin-c3p0</module>
         <module>smart-plugin-druid</module>
+        <module>smart-plugin-security</module>
     </modules>
 
 </project>
