publish smart framework v2.3 and upgrade to this version for every dependent modules

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
 
     <artifactId>smart-framework</artifactId>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3</version>
 
     <name>smart-framework</name>
     <description>Smart Framework is a lightweight Java Web Framework</description>
